Closed Bug 362995 Opened 18 years ago Closed 18 years ago

[FIX]Right part of focus outline of empty listbox is not visible

Categories

(Core :: Layout: Form Controls, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: martijn.martijn, Assigned: bzbarsky)

References

Details

(Keywords: regression, testcase, Whiteboard: [reflow-refactor])

Attachments

(2 files, 1 obsolete file)

See upcoming testcase.
This regressed between 2005-11-04 and 2005-11-05, a regression from bug 314879, that is the bug that seemed to make the focus outline of empty listboxes bigger.
The right part of the focus outline of an empty listbox isn't visible, though.

As a sidenote, an empty listbox has more height than a listbox with one option (see also testcase). This was always the case (also in Mozilla1.7).
In IE7 these 2 listboxes have the same height.
Attached file testcase
Attached patch Fix (obsolete) — Splinter Review
I'll wait on reflow branch to land, then merge this, then ask for reviews, since this conflicts with some reflow branch changes.
Assignee: nobody → bzbarsky
OS: Windows XP → All
Priority: -- → P3
Hardware: PC → All
Summary: Right part of focus outline of empty listbox is not visible → [FIX]Right part of focus outline of empty listbox is not visible
Whiteboard: [reflow-refactor]
Target Milestone: --- → mozilla1.9alpha
Attached patch Merged to tipSplinter Review
Attachment #247845 - Attachment is obsolete: true
Attachment #251805 - Flags: superreview?(roc)
Attachment #251805 - Flags: review?(roc)
Attachment #251805 - Flags: superreview?(roc)
Attachment #251805 - Flags: superreview+
Attachment #251805 - Flags: review?(roc)
Attachment #251805 - Flags: review+
Fixed.  Not sure how to regression-test this...
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: