Fix painting of focus outline for empty <select>s.  Bug 362995, r+sr=roc